@@ -1,1 +1,2 @@
+2023/01/23 Added help command
 2023/01/21 Added changelog for future changes
